474: fixes for Java 17